Bug 301240 - Parsing token page failed
Summary: Parsing token page failed
Status: RESOLVED FIXED
Alias: None
Product: libkgapi
Classification: Frameworks and Libraries
Component: General (other bugs)
Version First Reported In: 0.4.0
Platform: openSUSE Linux
: NOR grave
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
: 302124 302263 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-05 21:25 UTC by Vojtěch Zeisek
Modified: 2012-06-20 20:57 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.4.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vojtěch Zeisek 2012-06-05 21:25:37 UTC
Recently, synchronization of my calendar (and later a also contacts) stopped working. When I try to reload address book (literally nothing happens when I try to reload calendar resource), I see Google Sign in dialog asking about permission for Akonadi Google to access my Google account. I log in, I grant access, but instead of confirmation page I see only "Error while talking to Google - Parsing token page failed". Same happens when I try to add new Google account. It happens every time. I have akonadi-4.7.4-3.20.31.x86_64, kdebase4-workspace-plasma-engine-akonadi-4.7.4-6.20.35.x86_64, plasma-addons-akonadi-4.7.4-2.6.2.x86_64, akonadi-runtime-1.6.2-3.4.2.x86_64, libakonadi4-4.7.4-2.7.2.x86_64, libakonadiprotocolinternals1-1.6.2-3.4.2.x86_64 and akonadi-google-0.3git-89.1.x86_64
Comment 1 Daniel Vrátil 2012-06-05 22:43:24 UTC
Git commit 5c92e2fb5ced528a20fd1d8723fd7a8d7ba686a3 by Dan Vrátil.
Committed on 06/06/2012 at 00:36.
Pushed by dvratil into branch 'LibKGAPI/0.4'.

Parse OAuth code from page title instead of body

The OAuth code used for obtaining access tokens is provided
in webpage <title> as a string. The title is guaranteed not to change
syntax, while the body of the page, from which we were parsing the token
before, can change anytime, which breaks the authentication process.
FIXED-IN: 0.4.1

M  +8    -3    libkgapi/ui/authwidget_p.cpp

http://commits.kde.org/akonadi-google/5c92e2fb5ced528a20fd1d8723fd7a8d7ba686a3
Comment 2 Daniel Vrátil 2012-06-05 22:43:25 UTC
Git commit a5ab37f15f39217cf631f8d61b2ea21305b81490 by Dan Vrátil.
Committed on 06/06/2012 at 00:36.
Pushed by dvratil into branch 'master'.

Parse OAuth code from page title instead of body

The OAuth code used for obtaining access tokens is provided
in webpage <title> as a string. The title is guaranteed not to change
syntax, while the body of the page, from which we were parsing the token
before, can change anytime, which breaks the authentication process.
FIXED-IN: 0.4.1

M  +8    -3    libkgapi/ui/authwidget_p.cpp

http://commits.kde.org/akonadi-google/a5ab37f15f39217cf631f8d61b2ea21305b81490
Comment 3 Dimitrios Glentadakis 2012-06-10 09:27:23 UTC
It is possoble to have this fix for kde 4.8.0 ?
I have mageia 2 and the only possible way to update akonadi-google would be a release with the 0.3.2 version (actual version akonadi-google-0.3.1-1.mga2.src.rpm), as the new version Mageia 3 will be released the next year !
http://img502.imageshack.us/img502/8160/konqmageiaforum1.png
Comment 4 Daniel Vrátil 2012-06-10 14:08:16 UTC
(In reply to comment #3)
> I have mageia 2 and the only possible way to update akonadi-google would be
> a release with the 0.3.2 version

There will be no further release of akonadi-google ( = no tarballs with libkgoogle library and Akonadi resources together). Here's a proposed solution for you (or any other distributions):

Distributions can package stable LibKGAPI. I will setup a scratch repo in git.kde.org/scratch/dvratil/akonadi-google-resources which will contain the Akonadi resources for Google from kdepim-runtime and I'll try to keep it in sync. The repository will have no versions or releases though, but I guess that should not be a problem (you can subscribe to repo RSS feed). The main feature development is going in LibKGAPI anyway and it has stable releases.
Comment 5 Dimitrios Glentadakis 2012-06-10 15:10:41 UTC
Thanks very much, i will transfer the message to my distribution maintainers.
Comment 6 Daniel Vrátil 2012-06-18 13:42:25 UTC
*** Bug 302124 has been marked as a duplicate of this bug. ***
Comment 7 Daniel Vrátil 2012-06-20 20:57:06 UTC
*** Bug 302263 has been marked as a duplicate of this bug. ***