Parse OAuth code from page title instead of body

The OAuth code used for obtaining access tokens is provided
in webpage <title> as a string. The title is guaranteed not to change
syntax, while the body of the page, from which we were parsing the token
before, can change anytime, which breaks the authentication process.

BUG: 301240
FIXED-IN: 0.4.1